--- a/code.ipynb
+++ b/code.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "path = \"D://Project//model_6\"\n",
-    "train_data = \"data3//train\"\n",
-    "test_data = \"data3//test\""
+    "train_data = \"data//train\"\n",
+    "test_data = \"data//test\""
    ]
   },
   {
@@ -274,8 +274,8 @@
    },
    "outputs": [],
    "source": [
-    "checkpoint_path = \"checkpoint2//cp.ckpt\"\n",
-    "checkpoint_dir = \"checkpoint2\""
+    "checkpoint_path = \"checkpoint//cp.ckpt\"\n",
+    "checkpoint_dir = \"checkpoint\""
    ]
   },
   {
@@ -1082,7 +1082,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(\"new_cnn_model.h5\")"
+    "model.save(\"cnn_model.h5\")"
    ]
   },
   {
